fix: responsive layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,5 +11,9 @@
 	&.black {
 		background-color: #000000;
 	}
+
+	&.grey {
+		background-color: #fafafa;
+	}
 }
 
