--- a/src/app/components/hero-mobile/hero-mobile.component.scss
+++ b/src/app/components/hero-mobile/hero-mobile.component.scss
@@ -56,10 +56,10 @@
     }
   }
 
-	@media screen and (min-width: 480px) {
+	@media screen and (min-width: 510px) {
 
 		> div:not(.globe-container) {
-			padding: 15px 60px;
+			padding: 15px 48px;
 		}
 
 		.call-to-action {
