--- a/src/app/components/xm-carousel/xm-carousel.component.scss
+++ b/src/app/components/xm-carousel/xm-carousel.component.scss
@@ -5,7 +5,7 @@
 }
 
 
-.carousel-slide {
+.carousel {
 }
 
 .inner-slide {
