--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,7 @@ body {
 
 .carousel {
 	height: 100%!important;
+	margin: auto;
 }
 
 .center-content {
